[project]
name = "mock-dss-load-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aio-pika",
    "configargparse",
    "debugpy",
    "flask",
    "flask-cors",
    "flask-login",
    "locust",
    "locust-cloud",
    "psycopg[binary,pool]",
    "pydantic-settings",
    "python-socketio",
    "redis",
    "requests",
]

[tool.locust]
headless = true
# master = true
# expect-workers = 5
host = "http://localhost:8000"
users = 100
spawn-rate = 10
run-time = "10m"
csv = "results"
