[project]
name = "mock-dss-load-tests"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "debugpy",
    "locust",
    "pika",
    "psycopg[binary,pool]",
    "pydantic-settings",
    "redis",
]

[tool.locust]
headless = true
# master = true
# expect-workers = 5
host = "http://localhost:8000"
users = 90
spawn-rate = 10
run-time = "10m"
csv = "results"
